# openthread_telink_lib

./: .gitattributes  CMakeLists.txt  Kconfig
zephyr/: module.yml
